Add next button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<p id="content"></p>
+	<button onclick="next()">Click me</button> 
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
