Add styles and center everything

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset='utf-8'>
 	<title>ASCII face generator</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<p id="content"></p>
-	<button onclick="next()">Click me</button> 
+	<div>
+		<h1>ASCII face generator</h1>
+		<h2>Probably useless, but fun.</h2>
+		<p id="content"></p>
+	</div> 
+	<button onclick="next()">Click me</button>
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
