Add follow buttons in footer and center everything

--- a/index.html
+++ b/index.html
@@ -2,16 +2,39 @@
 <html>
 <head>
 	<meta charset='utf-8'>
-	<title>ASCII face generator</title>
+	<title>ASCII Face Generator</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
-		<h1>ASCII face generator</h1>
-		<h2>Probably useless, but fun.</h2>
+	<header>
+		<h1>ASCII&nbsp; Face Generator</h1>
+		<h3>Probably useless, but fun.</h3>
 		<p id="content"></p>
-	</div> 
+	</header>
+
 	<button onclick="next()">Click me</button>
+
+	<footer>
+
+	<h4>Wanna add your own ascii face? Pull requests are welcome! <br/><a href="https://github.com/diegowifi/ascii-face-generator" target="_blank">Visit the repo</a></h4>
+
+	<center>
+
+	<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&repo=ascii-face-generator&type=watch"
+  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+
+		<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&repo=ascii-face-generator&type=fork"
+  allowtransparency="true" frameborder="0" scrolling="0" width="64" height="20"></iframe>
+
+  		<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&type=follow"
+  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+
+  <a href="https://twitter.com/Diego_WiFi" class="twitter-follow-button" data-show-count="false">Follow @Diego_WiFi</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</center>
+
+	</footer>
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
