Fix typo in footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<footer>
 
-	<h4>Wanna add your own ascii face? Pull requests are welcome! <br/><a href="https://github.com/diegowifi/ascii-face-generator" target="_blank">Visit the repo</a></h4>
+	<h4>Wanna add your own ASCII face? Pull requests are welcome! <br/><a href="https://github.com/diegowifi/ascii-face-generator" target="_blank">Visit the repo</a></h4>
 
 	<center>
 
