Add favicon and comment faces not showing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<title>ASCII Face Generator</title>
+	<link href="smiley.png" rel="shortcut icon" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -22,10 +23,10 @@
 	<center>
 
 	<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&repo=ascii-face-generator&type=watch"
-  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="55" height="20"></iframe>
 
 		<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&repo=ascii-face-generator&type=fork"
-  allowtransparency="true" frameborder="0" scrolling="0" width="64" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="56" height="20"></iframe>
 
   		<iframe src="http://ghbtns.com/github-btn.html?user=diegowifi&type=follow"
   allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
